Solve 30 problems without visualization, use platform-specific for-each command on Groovy and Kotlin